# ERP-Lead-Intelligence-Engine

./: .gitignore  LICENSE  README.md  pyproject.toml  test_groq.py
src/: api.py  cli.py
src/config/: settings.py
src/domain/: business_analysis.py  company_profile.py  erp_recommendation.py  lead_report.py
src/exporters/: excel_exporter.py
src/interfaces/: llm_provider.py  research_provider.py
src/providers/: firecrawl_provider.py  groq_provider.py  tavily_provider.py
src/services/: company_research_service.py  recommendation_service.py  research_service.py
src/utils/: company_profile_merge.py
src/workflows/: lead_intelligence_workflow.py
tests/: test_company_research_service.py  test_groq_provider.py  test_research_pipeline.py
