[project]
name = "erp-lead-intelligence-engine"
version = "0.1.0"
description = "AI-powered ERP Lead Intelligence Platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "Kumar Sanu" }
]

dependencies = [
    "groq",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv",
    "openpyxl"
]

[project.scripts]
erp-ai = "src.cli:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
"" = "."